--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -7,8 +7,9 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 50px;
+    padding: 50px 0px;
 }
+
 .mailInputContainer>input{
     width: 300px;
     height: 30px;
